[build-system]
requires = [
  "setuptools>=75.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fckit_yaml_reader"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
  "ruamel.yaml==0.18.6",
  "ruamel.yaml.clib>=0.2.8",
  "fypp>=3.2"
]
license = {text = "Apache-2.0"}
description = "A minimal wrapper for ruamel.yaml to create an API consistent with pyyaml."
